# cpp-skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  manual.yml
src/: CMakeLists.txt
src/cppskeleton/: CMakeLists.txt  main.cpp
src/cppskeleton/src/: CMakeLists.txt  cppskeleton.cpp  cppskeleton.h
src/cppskeleton/test/: CMakeLists.txt  test.cpp
